# vlsiffra

./: .gitignore  Makefile  README.md  setup.cfg
.github/workflows/: test.yml
ci/: create_venv.sh  formal.sh  pythontests.sh  verilator.sh
formal/: adder.tcl  carry_adder.tcl  multiplier.tcl  multiply_adder.tcl  multiply_adder_pipelined.tcl
gold/: adder.v  carry_adder.v  multiplier.v  multiply_adder.v  multiply_adder_pipelined.v
openroad/32bit_4cycle_asap7_multiplier/: README.md  config.mk
openroad/64bit_2cycle_asap7_multiply_adder/: README.md  config.mk
tests/: test_adder.py  test_multiplier.py  test_multiplier_exhaustive.py  test_multiplier_specific.py  test_multiply_adder_pipelined.py
verilator/: multiplier.cpp
verilog/: asap7.v  generic.bb.v  generic.v  gf180mcu.v  sky130hd.v
vlsi_arithmetic/: multiplier.py  vlsi-adder  vlsi-multiplier
vlsi_arithmetic/tech/: Tech.py  gf180mcu.py  none.py  sky130hd.py
vlsiffra/: adder.py  multiplier.py  vlsi-adder  vlsi-multiplier
vlsiffra/tech/: asap7.py  base.py  generic.py  gf180mcu.py  none.py  sky130.py  sky130hd.py
