[metadata]
name = vlsiffra
version = 1.0.0
author = Anton Blanchard
author_email = anton@ozlabs.org
description = Gate level implementation of adders and multipliers
long_description = file: README.md
long_description_content_type = text/markdown
keywords = amaranth
platform = any
license_file = LICENSE
url = https://github.com/antonblanchard/vlsiffra
project_urls =
    Bug Tracker = https://github.com/antonblanchard/vlsiffra/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: System :: Hardware
    License :: OSI Approved :: Apache Software License

[options]
install_requires =
    amaranth
packages = find:
python_requires = >=3.6
test_suite = tests
scripts =
    vlsiffra/vlsi-adder
    vlsiffra/vlsi-multiplier

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, docs/, build/, dist/, venv/
ignore = E221
